--- a/node-express/package.json
+++ b/node-express/package.json
@@ -10,6 +10,7 @@
   "author": "Luis Vargas",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "morgan": "^1.10.0"
   }
 }
